# LittleEngine-Template

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
LittleEngine/: CMakeLists.txt
LittleEngine/include/LittleEngine/: internal.h  little_engine.h
LittleEngine/include/LittleEngine/Audio/: audio.h  sound.h
LittleEngine/include/LittleEngine/Core/: window.h
LittleEngine/include/LittleEngine/Graphics/: camera.h  color.h  default_font.h  font.h  lighting.h  render_target.h  renderer.h  shader.h  texture.h
LittleEngine/include/LittleEngine/Input/: input.h
LittleEngine/include/LittleEngine/Math/: geometry.h  random.h
LittleEngine/include/LittleEngine/Platform/: platform.h
LittleEngine/include/LittleEngine/Platform/GLFW/: glfw_platform.h  glfw_utils.h  glfw_window.h  platform_glfw.h
LittleEngine/include/LittleEngine/Platform/SDL/: sdl_platform.h  sdl_utils.h  sdl_window.h
LittleEngine/include/LittleEngine/UI/: ui_context.h  ui_element.h  ui_system.h
LittleEngine/include/LittleEngine/Utils/: debug_tools.h  file_system.h  logger.h
LittleEngine/src/: little_engine.cpp
LittleEngine/src/Audio/: audio.cpp  sound.cpp
LittleEngine/src/Graphics/: bitmap_helper.cpp  camera.cpp  font.cpp  lighting.cpp  render_target.cpp  renderer.cpp  shader.cpp  texture.cpp  tilemap_renderer.cpp
LittleEngine/src/Input/: input.cpp
LittleEngine/src/Math/: geometry.cpp  random.cpp
LittleEngine/src/Platform/GLFW/: glfw_platform.cpp  glfw_utils.cpp  glfw_window.cpp  platform_glfw.cpp
LittleEngine/src/Platform/SDL/: sdl_platform.cpp  sdl_utils.cpp  sdl_window.cpp
LittleEngine/src/UI/: ui_context.cpp  ui_element.cpp  ui_system.cpp
LittleEngine/src/Utils/: debug_tools.cpp  file_system.cpp  logger.cpp
game/: CMakeLists.txt
game/include/gameLayer/: game.h
game/resources/: blur.frag  fragment.frag  fullscreen.vert  fullscreen_image_blit.frag  light.frag  light.vert  merge_light_scene.frag  shadow.frag  test.frag
game/src/: main.cpp
game/src/gameLayer/: game.cpp
include/gameLayer/: game.h  gameData.h  input_action.h
resources/: merge_light_scene.frag  shadow.frag  shadow.vert  vertex.vert
src/gameLayer/: game.cpp
src/platform/: main.cpp
